--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,11 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/mainScreen"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_color"
     tools:context=".Main2Activity">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:id="@+id/scoreScreen"
+        android:background="@drawable/custom_box"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="  Target: 0 "
+            android:id="@+id/targetScoreView"
+            android:fontFamily="@font/allerta_stencil"
+            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textSize="20dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" CHANTED: 0 "
+            android:fontFamily="@font/allerta_stencil"
+            android:textColor="@color/black"
+            android:id="@+id/currentChantCountView"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:textAllCaps="true"
+            android:textSize="20dp"/>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,14 +49,19 @@
         android:fontFamily="@font/allerta_stencil"
         android:textColor="@color/black"
         android:textAlignment="center"
+        android:id="@+id/tapOnScreenView"
+        android:layout_centerInParent="true"
         android:textAllCaps="true"
         android:textSize="20dp"
         android:text="TAP ON SCREEN TO CHANT."/>
 
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/animationScreen"
+        android:visibility="invisible"
+        android:layout_height="200dp"
         app:lottie_autoPlay="false"
+        android:layout_centerInParent="true"
         app:lottie_loop="false"
         app:lottie_fileName="chanting_animation.json"/>
 
